Finish Company FAQ

--- a/beta/_navbar.html
+++ b/beta/_navbar.html
@@ -37,18 +37,20 @@
                                 <b class="caret"></b>                            
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a href="page_about.html">Procedure and Policies</a></li>
-                                <li><a href="page_services.html">Facilities</a></li>
-                                <li><a href="page_pricing.html">Employ Calender</a></li>
-                                <li><a href="page_coming_soon.html">Internships</a></li>
-                                <li><a href="page_faq.html">Brochures</a></li>
-                                <li><a href="page_search.html">Placement Automation System</a></li>
-                                <li><a href="page_gallery.html">Downloads</a></li>
-                                <li><a href="page_registration.html">Job Announcement Form</a></li>
-                                <li><a href="page_login.html">Register with Us</a></li>
-                                <li><a href="page_404.html">FAQs</a></li>
-                                
-                            </ul>
+                                <li class="sub-heading"><a>Placements</a></li>
+                                <li><a href="company_registration.html">Company Registration</a></li>
+                                <li><a href="procedure_policy.html">Procedure and Policy</a></li>
+                                <li><a href="facilities.html">Facilities</a></li>
+                                <li><a href="schedule.html">Placement Calendar</a></li>
+                                <li><a href="brochures.html">Informational Brochures</a></li>
+                                <li><a href="http://placement.iitk.ac.in">Placement Automation System</a></li>
+                                <li><a href="company_faq.html">FAQs</a></li>
+                                <li class="sub-heading"><a>Internships</a></li>
+                                <li><a href="#">Internships</a></li>
+                                <li class="sub-heading"><a>Downloads</a></li>
+                                <li><a href="#">Job Announcement Form</a></li>
+                                <li><a href="#">Campus Recruitement Guide</a></li>
+                            </ul>    
                             <b class="caret-out"></b>                        
                         </li>
                         <li>
