--- a/beta/company_faq.html
+++ b/beta/company_faq.html
@@ -25,7 +25,10 @@
     <div class="row-fluid">
         <!-- Left Sidebar(Content Part) -->        
         <div class="span9">
-            
+            <div class="headline"><h3>FAQs</h3><span class="pull-right">
+              <button id="expand" class="btn-u" href="#"><i class="icon-plus"></i></button>
+              <button id="collapser" class="btn-u btn-u-orange" href="#"><i class="icon-minus"></i></button>
+            </div>
             <div class="accordion acc-home margin-bottom-40" id="accordion2">
                 <div class="accordion-group">
                   <div class="accordion-heading">
@@ -52,7 +55,7 @@
                   </div>
                   <div id="collapseTwo" class="accordion-body collapse" style="height: 0px;">
                     <div class="accordion-inner">
-                      <p>To participate in the Campus Recruitment Program, a company must first contact the placement office or register on the website. The company is then sent the login details which would let them login in our Placement Automation System (PAS) enabling them to post job opportunities &amp; see the profiles of students interested in their job opening. You can also find the detailed Placement Procedure <a href="#"><code>here</code></a></p>
+                      <p>To participate in the Campus Recruitment Program, a company must first contact the placement office or register on the website. The company is then sent the login details which would let them login in our Placement Automation System (PAS) enabling them to post job opportunities &amp; see the profiles of students interested in their job opening. You can also find the detailed Placement Procedure <code><a href="procedure_policy.html">here</a></code></p>
                     </div>
                   </div>
                 </div><!--/accordion-group-->
@@ -76,7 +79,7 @@
                   </div>
                   <div id="collapseFour" class="accordion-body collapse" style="height: 0px;">
                     <div class="accordion-inner">
-                      <p>The recruitment season is held in <strong>December</strong> every year and the PPT's can be held anytime between 10th of August to mid-November. For a detailed itinerary, Please refer to the <a href="#"><code>Employer Calendar</code></a></p>
+                      <p>The recruitment season is held in <strong>December</strong> every year and the PPT's can be held anytime between 10th of August to mid-November. For a detailed itinerary, Please refer to the <code><a href="schedule.html">Employer Calendar</a></code></p>
                     </div>
                   </div>
                 </div><!--/accordion-group-->
@@ -88,18 +91,18 @@
                   </div>
                   <div id="collapseFive" class="accordion-body collapse" style="height: 0px;">
                     <div class="accordion-inner">
-                      <p>A company will only be allowed to hold its PPT after filling up the job announcement form. A typical pre placement session is scheduled for 60 minutes. In view of the academic calendar of the students, the session are scheduled between 6pm to 9pm on weekdays, and between 10am and 5pm hours on Saturdays and Sundays. Student volunteers will get in touch with the company to fix a mutual convenient time for the session.</p>
+                      <p>A company will only be allowed to hold its PPT after filling up the job announcement form. A typical pre placement session is scheduled for 60 minutes. In view of the academic calendar of the students, the session are scheduled between 6PM to 9PM on weekdays, and between 10AM and 5PM hours on Saturdays and Sundays. Student volunteers will get in touch with the company to fix a mutual convenient time for the session.</p>
                     </div>
                   </div>
                 </div>
                 <div class="accordion-group">
                   <div class="accordion-heading">
                     <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseSix">
-                      On what basis is the slot allotted to a company for the final placement?
+                      What kind of information do the students expect in PPTs?
                     </a>
                   </div>
                   <div id="collapseSix" class="accordion-body collapse" style="height: 0px;">
-  h                  <div class="accordion-inner">
+                    <div class="accordion-inner">
                      <p>
                         The pre-placement talk is a platform for interaction between the company and the students. The presentation is followed by a Q&amp;A session where students interact with company officials to get a better understanding of the company and potential roles. The important insights that the students expect from the PPT are:
                         <ul>
@@ -114,73 +117,92 @@
                 </div>
                 <div class="accordion-group">
                   <div class="accordion-heading">
-                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseFour">
-                      When does the recruitment program start?
+                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseSeven">
+                      On what basis is the slot allotted to a company for the final placement?
                     </a>
                   </div>
-                  <div id="collapseFour" class="accordion-body collapse" style="height: 0px;">
+                  <div id="collapseSeven" class="accordion-body collapse" style="height: 0px;">
                     <div class="accordion-inner">
-                      The recruitment season is held in December every year and the PPT's can be held anytime between 10th of August to mid-November. For a detailed itinerary, Please refer to the <a href="#"><code>Employer Calendar</code></a>
+                      <p>Slotting is done subject to the following parameters:</p>
+                      <ul>
+                        <li> Student Preferences</li>
+                        <li> Work profile</li>
+                        <li> Compensation package</li>
+                        <li> Career Prospects</li>
+                        <li> Student Intake</li>
+                        <li> Past relationship with IIT Kanpur</li>
+                      </p>
                     </div>
                   </div>
                 </div>
                 <div class="accordion-group">
                   <div class="accordion-heading">
-                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseFour">
-                      When does the recruitment program start?
+                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseEight">
+                      What are the infrastructural facilities available on the campus for the placement process?
                     </a>
                   </div>
-                  <div id="collapseFour" class="accordion-body collapse" style="height: 0px;">
+                  <div id="collapseEight" class="accordion-body collapse" style="height: 0px;">
                     <div class="accordion-inner">
-                      The recruitment season is held in December every year and the PPT's can be held anytime between 10th of August to mid-November. For a detailed itinerary, Please refer to the <a href="#"><code>Employer Calendar</code></a>
+                      <p> The campus is equipped with state of the art communication, computing, and presentation facilities to facilitate a smooth placement process:</p>
+                      <ul>
+                        <li>Teleconferencing and video conferencing facility</li>
+                        <li>Linux and windows lab for online tests</li>
+                        <li>Centrally air conditioned auditorium, lecture halls, seminar and conference rooms for presentations, group discussions and interviews</li>
+                      </ul>
+                      <p>See a complete list of facilities <code><a href="facilities">here</a></code>
                     </div>
                   </div>
                 </div>
                 <div class="accordion-group">
                   <div class="accordion-heading">
-                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseFour">
-                      When does the recruitment program start?
+                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseNine">
+                      Are there multiple companies recruiting in the same slot? How is the case of multiple offers resolved?
                     </a>
                   </div>
-                  <div id="collapseFour" class="accordion-body collapse" style="height: 0px;">
+                  <div id="collapseNine" class="accordion-body collapse" style="height: 0px;">
                     <div class="accordion-inner">
-                      The recruitment season is held in December every year and the PPT's can be held anytime between 10th of August to mid-November. For a detailed itinerary, Please refer to the <a href="#"><code>Employer Calendar</code></a>
+                      <p><strong>Yes</strong>, there are multiple companies recruiting in the same slot.The results of all the companies are announced at the end of the slot and if a student gets multiple offers then he is allowed to choose between one of them and inform the office of his decision before the beginning of the next slot.</p>
                     </div>
                   </div>
                 </div>
                 <div class="accordion-group">
                   <div class="accordion-heading">
-                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseFour">
-                      When does the recruitment program start?
+                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTen">
+                      Can a company interview the students already placed in other company?
                     </a>
                   </div>
-                  <div id="collapseFour" class="accordion-body collapse" style="height: 0px;">
+                  <div id="collapseTen" class="accordion-body collapse" style="height: 0px;">
                     <div class="accordion-inner">
-                      The recruitment season is held in December every year and the PPT's can be held anytime between 10th of August to mid-November. For a detailed itinerary, Please refer to the <a href="#"><code>Employer Calendar</code></a>
+                     <p>IIT Kanpur follows a <em>One student; One job</em> policy so once the job is registered against the student, he/she is not entitled to sit for any other company.</p>
                     </div>
                   </div>
                 </div>
                 <div class="accordion-group">
                   <div class="accordion-heading">
-                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseFour">
-                      When does the recruitment program start?
+                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseEleven">
+                      Is there any facility for the accommodation available on the campus?
                     </a>
                   </div>
-                  <div id="collapseFour" class="accordion-body collapse" style="height: 0px;">
+                  <div id="collapseEleven" class="accordion-body collapse" style="height: 0px;">
                     <div class="accordion-inner">
-                      The recruitment season is held in December every year and the PPT's can be held anytime between 10th of August to mid-November. For a detailed itinerary, Please refer to the <a href="#"><code>Employer Calendar</code></a>
+                      <p>On campus accommodation on payment basis in visitors' guest house is available subject to availability. For alternate arrangements, the list of hotels is available <code><a href="assets/docs/hotels.pdf">here</a></code></p>
                     </div>
                   </div>
                 </div>
                 <div class="accordion-group">
                   <div class="accordion-heading">
-                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseFour">
-                      When does the recruitment program start?
+                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwelve">
+                      How can one commute between the campus &amp; airport/railway station?
                     </a>
                   </div>
-                  <div id="collapseFour" class="accordion-body collapse" style="height: 0px;">
+                  <div id="collapseTwelve" class="accordion-body collapse" style="height: 0px;">
                     <div class="accordion-inner">
-                      The recruitment season is held in December every year and the PPT's can be held anytime between 10th of August to mid-November. For a detailed itinerary, Please refer to the <a href="#"><code>Employer Calendar</code></a>
+                      <p> The campus taxi service providers can be contacted for the same at the following numbers: </p>
+                      <ul>
+                        <li>Trimurti Travels - Mr Surender Yadav - 0512-259 5094</li>
+                        <li>Yadav Travels - Mr Rajpal Yadav - 0512-259 5095 - (Mobile : 93362 17156)</li>
+                      </ul>
+                      <p>The list of institute approved taxi operators can be found <code><a href="assets/docs/taxi_details.pdf">here</a></code> and approved rates can be found<code> <a href="assets/docs/taxi_rates.pdf">here</a></code></p>
                     </div>
                   </div>
                 </div>
@@ -195,5 +217,14 @@
 </div><!--/container-->     
 <!--=== End Content Part ===-->
 <!--#include file="_footer.html" -->
+<script type="text/javascript">
+  $('#expand').click(function(){
+    $('.accordion-body').collapse('hide');
+    $('.accordion-body').collapse('show');
+  });
+  $('#collapser').click(function(){
+    $('.accordion-body').collapse('hide');
+  });
+</script>
 </body>
 </html>	
