--- a/beta/brochures.html
+++ b/beta/brochures.html
@@ -96,6 +96,77 @@
       </span></h3>
     </div>
 
+    <div class="row-fluid">
+      <h3>Environmental Eng. &amp; Mgmt.
+      <span class="pull-right">
+        <a href="assets/docs/brochures/EEM_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
+        <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
+      </span></h3>
+    </div>
+
+    <div class="row-fluid">
+      <h3>Industrial Management Engineering
+      <span class="pull-right">
+        <a href="assets/docs/brochures/IME_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
+        <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
+      </span></h3>
+    </div>
+
+    <div class="row-fluid">
+      <h3>Laser Technology
+      <span class="pull-right">
+        <a href="assets/docs/brochures/LT_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
+        <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
+      </span></h3>
+    </div>
+
+    <div class="row-fluid">
+      <h3>MBA Program
+      <span class="pull-right">
+        <a href="assets/docs/brochures/MBA_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
+        <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
+      </span></h3>
+    </div>
+
+    <div class="row-fluid">
+      <h3>Material Sci. &amp; Engineering
+      <span class="pull-right">
+        <a href="assets/docs/brochures/EE_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
+        <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
+      </span></h3>
+    </div>
+
+    <div class="row-fluid">
+      <h3>Materials Science Programme
+      <span class="pull-right">
+        <a href="assets/docs/brochures/MSP_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
+        <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
+      </span></h3>
+    </div>
+
+    <div class="row-fluid">
+      <h3>Mechanical Engineering
+      <span class="pull-right">
+        <a href="assets/docs/brochures/ME_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
+        <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
+      </span></h3>
+    </div>
+
+    <div class="row-fluid">
+      <h3>Mathematics &amp; Scientifice Computing
+      <span class="pull-right">
+        <a href="assets/docs/brochures/MSC_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
+        <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
+      </span></h3>
+    </div>
+
+    <div class="row-fluid">
+      <h3>Statistics
+      <span class="pull-right">
+        <a href="assets/docs/brochures/STAT_brochure.pdf" class="btn-u btn-u-blue"><i class="icon-download-alt"></i> &nbsp;Download</a>
+        <a href="#" class="btn-u"><i class="icon-file"></i> &nbsp;View Online</a>
+      </span></h3>
+    </div>
 
    </div>
   </div>
