--- a/beta/_footer.html
+++ b/beta/_footer.html
@@ -13,11 +13,11 @@
 			<div class="span4">
 				<div class="headline"><h3>External Links</h3></div>
 				<ul class="unstyled">
-					<li><a href="#">IITK Home Page</a></li>
-					<li><a href="#">Key Administrators</a></li>
-					<li><a href="#">Students' Gymkhana</a></li>
-					<li><a href="#">Computer Center</a></li>
-					<li><a href="#">Directory</a></li>
+					<li><a href="http://www.iitk.ac.in" target="_blank">IITK Home Page</a></li>
+					<li><a href="http://www.iitk.ac.in/infocell/iitk/newhtml/kadmins.htm" target="_blank">Key Administrators</a></li>
+					<li><a href="http://students.iitk.ac.in/gymkhana/" target="_blank">Students' Gymkhana</a></li>
+					<li><a href="http://www.iitk.ac.in/cc/" target="_blank">Computer Center</a></li>
+					<li><a href="http://www.iitk.ac.in/tel/www/" target="_blank">Directory</a></li>
 				</ul>
 
 			</div>
