--- a/beta/_sidebar.html
+++ b/beta/_sidebar.html
@@ -2,7 +2,7 @@
     <div class="who margin-bottom-30">
         <div class="headline"><h3>Quick Links</h3></div>
         <ul class="unstyled" style="font-size:larger">
-            <li><a href="#">Company Registration</a></li>
+            <li><a href="company_registration.html">Company Registration</a></li>
             <li><a href="http://placement.iitk.ac.in">Placement Automation System</a></li>
             <li><a href="http://spo.iitk.ac.in/preparation">Preparation Portal </a> <!--<span class="label">Internal Link</span>--></li>
             <li><a href="/about_us.html">Individual Contacts</a></li>
