Edit css for logos

--- a/beta/index.html
+++ b/beta/index.html
@@ -91,109 +91,50 @@
     <!-- Our Clients -->
     <div id="clients-flexslider" class="flexslider home clients">
         <div class="headline"><h3>Past Recruiters</h3></div>    
-        <ul class="slides">
+        <ul class="slides slide-logo">
             <li>
                 <a href="#">
                     <img src="assets/img/clients/hp_grey.png" alt="" /> 
                     <img src="assets/img/clients/hp.png" class="color-img" alt="" />
                 </a>
             </li>
-            <li>
-                <a href="#">
-                    <img src="assets/img/clients/igneus_grey.png" alt="" /> 
-                    <img src="assets/img/clients/igneus.png" class="color-img" alt="" />
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="assets/img/clients/vadafone_grey.png" alt="" /> 
-                    <img src="assets/img/clients/vadafone.png" class="color-img" alt="" />
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="assets/img/clients/walmart_grey.png" alt="" /> 
-                    <img src="assets/img/clients/walmart.png" class="color-img" alt="" />
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="assets/img/clients/shell_grey.png" alt="" /> 
-                    <img src="assets/img/clients/shell.png" class="color-img" alt="" />
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="assets/img/clients/natural_grey.png" alt="" /> 
-                    <img src="assets/img/clients/natural.png" class="color-img" alt="" />
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="assets/img/clients/aztec_grey.png" alt="" /> 
-                    <img src="assets/img/clients/aztec.png" class="color-img" alt="" />
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="assets/img/clients/gamescast_grey.png" alt="" /> 
-                    <img src="assets/img/clients/gamescast.png" class="color-img" alt="" />
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="assets/img/clients/cisco_grey.png" alt="" /> 
-                    <img src="assets/img/clients/cisco.png" class="color-img" alt="" />
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="assets/img/clients/everyday_grey.png" alt="" /> 
-                    <img src="assets/img/clients/everyday.png" class="color-img" alt="" />
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="assets/img/clients/cocacola_grey.png" alt="" /> 
-                    <img src="assets/img/clients/cocacola.png" class="color-img" alt="" />
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="assets/img/clients/spinworkx_grey.png" alt="" /> 
-                    <img src="assets/img/clients/spinworkx.png" class="color-img" alt="" />
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="assets/img/clients/shell_grey.png" alt="" /> 
-                    <img src="assets/img/clients/shell.png" class="color-img" alt="" />
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="assets/img/clients/natural_grey.png" alt="" /> 
-                    <img src="assets/img/clients/natural.png" class="color-img" alt="" />
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="assets/img/clients/gamescast_grey.png" alt="" /> 
-                    <img src="assets/img/clients/gamescast.png" class="color-img" alt="" />
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="assets/img/clients/everyday_grey.png" alt="" /> 
-                    <img src="assets/img/clients/everyday.png" class="color-img" alt="" />
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="assets/img/clients/spinworkx_grey.png" alt="" /> 
-                    <img src="assets/img/clients/spinworkx.png" class="color-img" alt="" />
-                </a>
-            </li>
+ <li> <a href="#"> <img src="assets/img/logo/Accenture.jpg" alt="" class="color-img" /><img src="assets/img/logo/Accenture_grey.jpg" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/Adobe.jpg" alt="" class="color-img" /><img src="assets/img/logo/Adobe_grey.jpg" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/Amazon.jpg" alt="" class="color-img" /><img src="assets/img/logo/Amazon_grey.jpg" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/Analog Devices.jpg" alt="" class="color-img" /><img src="assets/img/logo/Analog Devices_grey.jpg" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/Atkins.jpg" alt="" class="color-img" /><img src="assets/img/logo/Atkins_grey.jpg" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/Bentley.jpg" alt="" class="color-img" /><img src="assets/img/logo/Bentley_grey.jpg" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/Britannia.jpg" alt="" class="color-img" /><img src="assets/img/logo/Britannia_grey.jpg" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/Brocade.jpg" alt="" class="color-img" /><img src="assets/img/logo/Brocade_grey.jpg" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/Caterpillar.jpg" alt="" class="color-img" /><img src="assets/img/logo/Caterpillar_grey.jpg" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/DRDO.jpg" alt="" class="color-img" /><img src="assets/img/logo/DRDO_grey.jpg" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/Deloitte.jpg" alt="" class="color-img" /><img src="assets/img/logo/Deloitte_grey.jpg" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/Deutsche.Bank.jpg" alt="" class="color-img" /><img src="assets/img/logo/Deutsche_grey.jpg" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/Dolat Capital.jpg" alt="" class="color-img" /><img src="assets/img/logo/DolatCapi_grey.jpg" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/Dr.Reddy.jpg" alt="" class="color-img" /><img src="assets/img/logo/Dr.Reddy_grey.jpg" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/GE Technologies.jpg" alt="" class="color-img" /><img src="assets/img/logo/GETechnologies_grey.jpg" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/HSBC.jpg" alt="" class="color-img" /><img src="assets/img/logo/HSBC_grey.jpg" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/Headstrong.jpg" alt="" class="color-img" /><img src="assets/img/logo/Headstrong_grey.jpg" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/Hero Honda.jpg" alt="" class="color-img" /><img src="assets/img/logo/Hero Honda_grey.jpg" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/Hindusthan Unilever.jpg" alt="" class="color-img" /><img src="assets/img/logo/Hindusthan Unilever_grey.jpg" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/IBM.jpg" alt="" class="color-img" /><img src="assets/img/logo/IBM_grey.jpg" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/ISRO.jpg" alt="" class="color-img" /><img src="assets/img/logo/ISRO_grey.jpg" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/ITC.jpg" alt="" class="color-img" /><img src="assets/img/logo/ITC_grey.jpg" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/Inmobi.jpg" alt="" class="color-img" /><img src="assets/img/logo/Inmobi_grey.jpg" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/Mckinsey.jpg" alt="" class="color-img" /><img src="assets/img/logo/Mckinsey_grey.jpg" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/Microsoft.jpg" alt="" class="color-img" /><img src="assets/img/logo/Microsoft_grey.jpg" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/Mitsubishi.jpg" alt="" class="color-img" /><img src="assets/img/logo/Mitsubishi_grey.jpg" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/Mitsui Chemicals.jpg" alt="" class="color-img" /><img src="assets/img/logo/Mitsui Chemicals_grey.jpg" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/Morgan.Stanley.jpg" alt="" class="color-img" /><img src="assets/img/logo/Morgan.Stanley_grey.jpg" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/NVIDIA.jpg" alt="" class="color-img" /><img src="assets/img/logo/NVIDIA_grey.jpg" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/Netapp.India._grey.jpg" alt="" class="color-img" /><img src="assets/img/logo/Netapp.India.jpg" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/Renishaw.jpg" alt="" class="color-img" /><img src="assets/img/logo/Renishaw_grey.jpg" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/Samsung.jpg" alt="" class="color-img" /><img src="assets/img/logo/Samsung_grey.jpg" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/TVS Motors.jpg" alt="" class="color-img" /><img src="assets/img/logo/TVSMotors_grey.jpg" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/Yahoo.jpg" alt="" class="color-img" /><img src="assets/img/logo/Yahoo_grey.jpg" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/facebook.jpg" alt="" class="color-img" /><img src="assets/img/logo/facebook_grey.jpg" alt="" /></a></li>
+
+
         </ul>
     </div><!--/flexslider-->
     <!-- //End Our Clients -->
