--- a/beta/index.html
+++ b/beta/index.html
@@ -92,41 +92,41 @@
     <div id="clients-flexslider" class="flexslider home clients">
         <div class="headline"><h3>Past Recruiters</h3></div>    
         <ul class="slides slide-logo">
- <li> <a href="#"> <img src="assets/img/logo/Accenture.jpg" alt="" class="color-img" /><img src="assets/img/logo/Accenture_gray.jpg" alt="" /></a></li>
- <li> <a href="#"> <img src="assets/img/logo/Adobe.jpg" alt="" class="color-img" /><img src="assets/img/logo/Adobe_gray.jpg" alt="" /></a></li>
- <li> <a href="#"> <img src="assets/img/logo/Amazon.jpg" alt="" class="color-img" /><img src="assets/img/logo/Amazon_gray.jpg" alt="" /></a></li>
- <li> <a href="#"> <img src="assets/img/logo/Analog Devices.jpg" alt="" class="color-img" /><img src="assets/img/logo/Analog Devices_gray.jpg" alt="" /></a></li>
- <li> <a href="#"> <img src="assets/img/logo/Atkins.jpg" alt="" class="color-img" /><img src="assets/img/logo/Atkins_gray.jpg" alt="" /></a></li>
- <li> <a href="#"> <img src="assets/img/logo/Bentley.jpg" alt="" class="color-img" /><img src="assets/img/logo/Bentley_gray.jpg" alt="" /></a></li>
- <li> <a href="#"> <img src="assets/img/logo/Britannia.jpg" alt="" class="color-img" /><img src="assets/img/logo/Britannia_gray.jpg" alt="" /></a></li>
- <li> <a href="#"> <img src="assets/img/logo/Brocade.jpg" alt="" class="color-img" /><img src="assets/img/logo/Brocade_gray.jpg" alt="" /></a></li>
- <li> <a href="#"> <img src="assets/img/logo/Caterpillar.jpg" alt="" class="color-img" /><img src="assets/img/logo/Caterpillar_gray.jpg" alt="" /></a></li>
- <li> <a href="#"> <img src="assets/img/logo/DRDO.jpg" alt="" class="color-img" /><img src="assets/img/logo/DRDO_gray.jpg" alt="" /></a></li>
- <li> <a href="#"> <img src="assets/img/logo/Deloitte.jpg" alt="" class="color-img" /><img src="assets/img/logo/Deloitte_gray.jpg" alt="" /></a></li>
- <li> <a href="#"> <img src="assets/img/logo/Deutsche.Bank.jpg" alt="" class="color-img" /><img src="assets/img/logo/Deutsche.Bank_gray.jpg" alt="" /></a></li>
- <li> <a href="#"> <img src="assets/img/logo/Dolat Capital.jpg" alt="" class="color-img" /><img src="assets/img/logo/Dolat Capital_gray.jpg" alt="" /></a></li>
- <li> <a href="#"> <img src="assets/img/logo/Dr.Reddy.jpg" alt="" class="color-img" /><img src="assets/img/logo/Dr.Reddy_gray.jpg" alt="" /></a></li>
- <li> <a href="#"> <img src="assets/img/logo/GE Technologies.jpg" alt="" class="color-img" /><img src="assets/img/logo/GE Technologies_gray.jpg" alt="" /></a></li>
- <li> <a href="#"> <img src="assets/img/logo/HSBC.jpg" alt="" class="color-img" /><img src="assets/img/logo/HSBC_gray.jpg" alt="" /></a></li>
- <li> <a href="#"> <img src="assets/img/logo/Headstrong.jpg" alt="" class="color-img" /><img src="assets/img/logo/Headstrong_gray.jpg" alt="" /></a></li>
- <li> <a href="#"> <img src="assets/img/logo/Hero Honda.jpg" alt="" class="color-img" /><img src="assets/img/logo/Hero Honda_gray.jpg" alt="" /></a></li>
- <li> <a href="#"> <img src="assets/img/logo/Hindusthan Unilever.jpg" alt="" class="color-img" /><img src="assets/img/logo/Hindusthan Unilever_gray.jpg" alt="" /></a></li>
- <li> <a href="#"> <img src="assets/img/logo/IBM.jpg" alt="" class="color-img" /><img src="assets/img/logo/IBM_gray.jpg" alt="" /></a></li>
- <li> <a href="#"> <img src="assets/img/logo/ISRO.jpg" alt="" class="color-img" /><img src="assets/img/logo/ISRO_gray.jpg" alt="" /></a></li>
- <li> <a href="#"> <img src="assets/img/logo/ITC.jpg" alt="" class="color-img" /><img src="assets/img/logo/ITC_gray.jpg" alt="" /></a></li>
- <li> <a href="#"> <img src="assets/img/logo/Inmobi.jpg" alt="" class="color-img" /><img src="assets/img/logo/Inmobi_gray.jpg" alt="" /></a></li>
- <li> <a href="#"> <img src="assets/img/logo/Mckinsey.jpg" alt="" class="color-img" /><img src="assets/img/logo/Mckinsey_gray.jpg" alt="" /></a></li>
- <li> <a href="#"> <img src="assets/img/logo/Microsoft.jpg" alt="" class="color-img" /><img src="assets/img/logo/Microsoft_gray.jpg" alt="" /></a></li>
- <li> <a href="#"> <img src="assets/img/logo/Mitsubishi.jpg" alt="" class="color-img" /><img src="assets/img/logo/Mitsubishi_gray.jpg" alt="" /></a></li>
- <li> <a href="#"> <img src="assets/img/logo/Mitsui Chemicals.jpg" alt="" class="color-img" /><img src="assets/img/logo/Mitsui Chemicals_gray.jpg" alt="" /></a></li>
- <li> <a href="#"> <img src="assets/img/logo/Morgan.Stanley.jpg" alt="" class="color-img" /><img src="assets/img/logo/Morgan.Stanley_gray.jpg" alt="" /></a></li>
- <li> <a href="#"> <img src="assets/img/logo/NVIDIA.jpg" alt="" class="color-img" /><img src="assets/img/logo/NVIDIA_gray.jpg" alt="" /></a></li>
- <li> <a href="#"> <img src="assets/img/logo/Netapp.India._gray.jpg" alt="" class="color-img" /><img src="assets/img/logo/Netapp.India.jpg" alt="" /></a></li>
- <li> <a href="#"> <img src="assets/img/logo/Renishaw.jpg" alt="" class="color-img" /><img src="assets/img/logo/Renishaw_gray.jpg" alt="" /></a></li>
- <li> <a href="#"> <img src="assets/img/logo/Samsung.jpg" alt="" class="color-img" /><img src="assets/img/logo/Samsung_gray.jpg" alt="" /></a></li>
- <li> <a href="#"> <img src="assets/img/logo/TVS Motors.jpg" alt="" class="color-img" /><img src="assets/img/logo/TVS Motors_gray.jpg" alt="" /></a></li>
- <li> <a href="#"> <img src="assets/img/logo/Yahoo.jpg" alt="" class="color-img" /><img src="assets/img/logo/Yahoo_gray.jpg" alt="" /></a></li>
- <li> <a href="#"> <img src="assets/img/logo/facebook.jpg" alt="" class="color-img" /><img src="assets/img/logo/facebook_gray.jpg" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/Accenture.png" alt="" class="color-img" /><img src="assets/img/logo/Accenture_gray.png" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/Adobe.png" alt="" class="color-img" /><img src="assets/img/logo/Adobe_gray.png" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/Amazon.png" alt="" class="color-img" /><img src="assets/img/logo/Amazon_gray.png" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/Analog Devices.png" alt="" class="color-img" /><img src="assets/img/logo/Analog Devices_gray.png" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/Atkins.png" alt="" class="color-img" /><img src="assets/img/logo/Atkins_gray.png" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/Bentley.png" alt="" class="color-img" /><img src="assets/img/logo/Bentley_gray.png" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/Britannia.png" alt="" class="color-img" /><img src="assets/img/logo/Britannia_gray.png" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/Brocade.png" alt="" class="color-img" /><img src="assets/img/logo/Brocade_gray.png" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/Caterpillar.png" alt="" class="color-img" /><img src="assets/img/logo/Caterpillar_gray.png" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/DRDO.png" alt="" class="color-img" /><img src="assets/img/logo/DRDO_gray.png" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/Deloitte.png" alt="" class="color-img" /><img src="assets/img/logo/Deloitte_gray.png" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/Deutsche.Bank.png" alt="" class="color-img" /><img src="assets/img/logo/Deutsche.Bank_gray.png" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/Dolat Capital.png" alt="" class="color-img" /><img src="assets/img/logo/Dolat Capital_gray.png" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/Dr.Reddy.png" alt="" class="color-img" /><img src="assets/img/logo/Dr.Reddy_gray.png" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/GE Technologies.png" alt="" class="color-img" /><img src="assets/img/logo/GE Technologies_gray.png" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/HSBC.png" alt="" class="color-img" /><img src="assets/img/logo/HSBC_gray.png" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/Headstrong.png" alt="" class="color-img" /><img src="assets/img/logo/Headstrong_gray.png" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/Hero Honda.png" alt="" class="color-img" /><img src="assets/img/logo/Hero Honda_gray.png" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/Hindusthan Unilever.png" alt="" class="color-img" /><img src="assets/img/logo/Hindusthan Unilever_gray.png" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/IBM.png" alt="" class="color-img" /><img src="assets/img/logo/IBM_gray.png" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/ISRO.png" alt="" class="color-img" /><img src="assets/img/logo/ISRO_gray.png" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/ITC.png" alt="" class="color-img" /><img src="assets/img/logo/ITC_gray.png" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/Inmobi.png" alt="" class="color-img" /><img src="assets/img/logo/Inmobi_gray.png" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/Mckinsey.png" alt="" class="color-img" /><img src="assets/img/logo/Mckinsey_gray.png" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/Microsoft.png" alt="" class="color-img" /><img src="assets/img/logo/Microsoft_gray.png" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/Mitsubishi.png" alt="" class="color-img" /><img src="assets/img/logo/Mitsubishi_gray.png" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/Mitsui Chemicals.png" alt="" class="color-img" /><img src="assets/img/logo/Mitsui Chemicals_gray.png" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/Morgan.Stanley.png" alt="" class="color-img" /><img src="assets/img/logo/Morgan.Stanley_gray.png" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/NVIDIA.png" alt="" class="color-img" /><img src="assets/img/logo/NVIDIA_gray.png" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/Netapp.India._gray.png" alt="" class="color-img" /><img src="assets/img/logo/Netapp.India.png" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/Renishaw.png" alt="" class="color-img" /><img src="assets/img/logo/Renishaw_gray.png" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/Samsung.png" alt="" class="color-img" /><img src="assets/img/logo/Samsung_gray.png" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/TVS Motors.png" alt="" class="color-img" /><img src="assets/img/logo/TVS Motors_gray.png" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/Yahoo.png" alt="" class="color-img" /><img src="assets/img/logo/Yahoo_gray.png" alt="" /></a></li>
+ <li> <a href="#"> <img src="assets/img/logo/facebook.png" alt="" class="color-img" /><img src="assets/img/logo/facebook_gray.png" alt="" /></a></li>
 
 
         </ul>
